Fri Jun 20 08:54:29 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          Added code to process type specific assignments that may be
          defined within a feature.

Fri Jun 20 08:10:11 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/README:

          Added documentation about the new feature project type.

        * bin/MakeProjectCreator/config/global.features:

          Defaulted the qt feature to disabled.

        * bin/MakeProjectCreator/modules/ArrayHandle.pm:
        * bin/MakeProjectCreator/modules/Creator.pm:
        * bin/MakeProjectCreator/modules/Parser.pm:
        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          The majority of the code for handling feature project went in
          here.  One main thing that was changed is that instead of using
          the <$fh> paradigm to read files, the following is used
          $_ = $fh->getline().  This is compatible with the new ArrayHandle
          module that I added.

        * bin/MakeProjectCreator/modules/Options.pm:

          Added a missing space in the completion command.

        * bin/MakeProjectCreator/modules/GNUACEProjectCreator.pm:
        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Changed the code to match some new methods added in Creator and
          ProjectCreator.

Thu Jun 19 13:03:49 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Fixed a bug where the BUILD target wouldn't be updated when the
          project had component requirements.

Thu Jun 19 12:14:31 2003  Gan Deng <gan.deng@vanderbilt.edu>

        * bin/tao_other_tests.lst

          Added the latency tests for sequences of various data types.

Thu Jun 19 11:36:14 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Updated the GNUACE template to issue information as to why a